tests/invalid/Byte_Invalid_2.whiley
public function broken(byte b) -> (byte r)
ensures r != 0b0:
    //
    return b
    